@@ -164,3 +164,10 @@ with automatic boundaries correction, pdf(left)=0.521461 , pdf(right)=0.505805
 with user defined lower/automatic upper boundaries correction, pdf(left)=0.506608 , pdf(right)=0.505805
 with automatic lower/user defined upper boundaries correction, pdf(left)=0.521461 , pdf(right)=0.504241
 with user defined boundaries correction, pdf(left)=0.506608 , pdf(right)=0.504241
+0 : [ -7  0  8 ]
+1 : [ -7  0  8 ]
+2 : [ -7  0  8 ]
+    [ d7       a23      d8       ]
+0 : [ -7        2.24363  8       ]
+1 : [ -7        2.24139  8       ]
+2 : [ -7        2.82444  8       ]
