@@ -17,6 +17,7 @@
 
 === Bug fixes ===
  * #1267 (Some CSV files cannot be imported)
+ * #1377 (The `setKnownParameter` method is not compatible with `buildEstimator`)
  * #1507 (Leak in Collection typemaps)
  * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 
